force-app/main/default/objects/Apttus_Billing__CustomNumberingFieldMappings__mdt/Apttus_Billing__CustomNumberingFieldMappings__mdt.object-meta.xml
<CustomObject>
    <description>This is used as an intermediate translation layer for mapping any of the values in all the 5 fields.</description>
    <label>Custom Numbering Field Mapping</label>
    <pluralLabel>Custom Numbering Field Mappings</pluralLabel>
</CustomObject>