force-app/main/default/objects/Apttus_Billing__CustomNumberingFieldMappings__mdt/fields/Apttus_Billing__FieldCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__FieldCode__c</fullName>
    <description>Field Code.</description>
    <inlineHelpText>Field Code.</inlineHelpText>
    <label>Field Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>