force-app/main/default/objects/Apttus_Billing__CustomNumberingFieldMappings__mdt/fields/Apttus_Billing__FieldNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__FieldNumber__c</fullName>
    <description>The number of the Field (1 - 5) this mapping pertains to. An empty field or null implies the mapping pertains to all of the fields.</description>
    <inlineHelpText>The number of the Field (1 - 5) this mapping pertains to. An empty field or null implies the mapping pertains to all of the fields.</inlineHelpText>
    <label>Field Number</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>