force-app/main/default/objects/Apttus_Billing__CustomNumberingFieldMappings__mdt/fields/Apttus_Billing__ObjectType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ObjectType__c</fullName>
    <description>The type of the object (Invoice, Payment, etc.) this field mapping pertains to. An empty value or null implies the mapping pertains to all of the object types.</description>
    <inlineHelpText>The type of the object (Invoice, Payment, etc.) this field mapping pertains to. An empty value or null implies the mapping pertains to all of the object types.</inlineHelpText>
    <label>Object Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>