force-app/main/default/objects/Apttus_Billing__CustomNumberingFieldMappings__mdt/listViews/ALl.listView-meta.xml
<ListView>
    <fullName>ALl</fullName>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>Apttus_Billing__ObjectType__c</columns>
    <columns>Apttus_Billing__FieldNumber__c</columns>
    <columns>Apttus_Billing__FieldValue__c</columns>
    <columns>Apttus_Billing__FieldCode__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>ALl</label>
</ListView>